src/objects/XO_Equipment_Catalogue__c.object
<CustomObject>
    <description>This is the residence for all XO approved and specified clinical and office equipment</description>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purchase_Category__c</fullName>
        <label>Purchase Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinic Equipment</fullName>
                </value>
                <value>
                    <fullName>Clinic Supplies</fullName>
                </value>
                <value>
                    <fullName>Clinic Medications</fullName>
                </value>
                <value>
                    <fullName>Office Equipment</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>XO Equipment Catalogue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Item_Number__c</columns>
        <columns>NAME</columns>
        <columns>Purchase_Category__c</columns>
        <columns>Picture__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>XO Equipment Catalogue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Equipment Catalogue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>